increase timer size, fix spacing

--- a/assets/stylesheets/app.scss
+++ b/assets/stylesheets/app.scss
@@ -18,19 +18,19 @@
   }
 }
 .timer-counter {
-  height: 300px;
-  width: 300px;
-  margin: -10px auto 60px;
+  height: 400px;
+  width: 400px;
+  margin: -30px auto 30px;
   background-color: white;
   border-radius: 50%;
   .timer-numbers
     ul {
       list-style: none;
-      padding: 70px 0 0;
+      padding: 100px 0 0;
     }
       li {
         display: inline;
-        font-size: 90px;
+        font-size: 120px;
         font-weight: bold;
         color: #ff7728;
         cursor: pointer;
